--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
-title:       Pixyll
-email:       your_email@example.com
-author:      John Otander
+title:       Magesh Kumar
+email:       m.magesh.66@gmail.com
+author:      Magesh Kumar Murali
 description: "A simple, beautiful theme for Jekyll that emphasizes content rather than aesthetic fluff."
 baseurl:     ""
-url:         "http://pixyll.com"
+url:         "http://mageshkumar.com"
 date_format: "%b %-d, %Y"
 
 # Google services
@@ -20,16 +20,16 @@ bing_verification:
 animated:             false
 show_related_posts:   false
 show_post_footers:    false
-show_social_icons:    false
+show_social_icons:    true
 ajaxify_contact_form: false
-enable_mathjax: false
-extended_fonts: false
+enable_mathjax: true
+extended_fonts: true
 enable_anchorjs: false
 
 # Facebook Page integration
 # (for instant articles and other stuff)
 fb_page: false
-fb_page_id: 
+fb_page_id:
 
 # Disqus post comments
 # (leave blank to disable Disqus)
@@ -42,14 +42,14 @@ facebook_appid:
 facebook_comments_number: 10
 
 # Social icons
-github_username:
+github_username: Ema93sh
 bitbucket_username:
 stackoverflow_id:
-twitter_username:
+twitter_username: magesh66
 skype_username:
 steam_nickname:
 google_plus_id:
-linkedin_username:
+linkedin_username: magesh-kumar
 angellist_username:
 medium_id:
 bitcoin_url:
@@ -57,7 +57,7 @@ paypal_url:
 flattr_button:
 
 # Post sharing icons
-show_sharing_icons: false
+show_sharing_icons: true
 # Change to 'true' to enable individual icons
 share_facebook: false
 share_twitter: false
@@ -67,7 +67,7 @@ share_digg: false
 share_tumblr: false
 share_reddit: false
 share_stumbleupon: false
-share_hackernews: false
+share_hackernews: true
 
 text:
   pagination:
