Added a new page

--- a/_config.yml
+++ b/_config.yml
@@ -55,7 +55,7 @@ medium_id:
 bitcoin_url:
 paypal_url:
 flattr_button:
-
+instagram_username: ema93sh
 # Post sharing icons
 show_sharing_icons: true
 # Change to 'true' to enable individual icons
